tests/machine/x/go/group_by_sort.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_sort.go:110:12: cannot use _sum(func() []any {…}()) (value of type float64) as int value in struct literal
